:bug: fix horizontal scroll in Chrome

--- a/HRNet-React/src/style/base/_base.scss
+++ b/HRNet-React/src/style/base/_base.scss
@@ -10,7 +10,6 @@ body {
 }
 
 .global-container {
-	width: 100vw;
 	min-height: 100vh;
 	display: flex;
 	justify-content: center;
